--- a/index_l1.html
+++ b/index_l1.html
@@ -2,8 +2,9 @@
 <html>
 	<head>
 
+		<meta charset="utf-8">
 		<title>Резюме</title>
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+		
 	</head>
 	<body>
 	<center>
