--- a/index_l2.html
+++ b/index_l2.html
@@ -1,110 +1,109 @@
 <!DOCTYPE html >
 <html>
 	<head>
-		<meta charset="utf-8">
-		
+		<meta charset="utf-8">		
 		<link rel="stylesheet" href="mstyle.css">
-		<title>Резюме</title>
+		<title>Р РµР·СЋРјРµ</title>
 
 	</head>
 	<body>
 	<center>
-<!-- Основная таблица -->
+<!-- РћСЃРЅРѕРІРЅР°СЏ С‚Р°Р±Р»РёС†Р° -->
 	<table border="1" width="800" height="1000" valign="top" cellpadding="5" cellspacing="0" rules="none">
 			
-			<tr> <!-- 1 строка -->
-				<!-- Заголовок -->
-				<td height="2%" colspan="2" valign="top"><div><U><center><h2>РЕЗЮМЕ</h2></center><U></div></td>		
+			<tr> <!-- 1 СЃС‚СЂРѕРєР° -->
+				<!-- Р—Р°РіРѕР»РѕРІРѕРє -->
+				<td height="2%" colspan="2" valign="top"><div><U><center><h2>Р Р•Р—Р®РњР•</h2></center><U></div></td>		
 			</tr>
 		
-			<tr > <!-- 2 строка -->	
+			<tr > <!-- 2 СЃС‚СЂРѕРєР° -->	
 				<td valign="top" width="210"> 
-					<!-- Таблица для фотки -->
+					<!-- РўР°Р±Р»РёС†Р° РґР»СЏ С„РѕС‚РєРё -->
 					<table border="1" width="209" height="200" valign="top" >
 							<tr>
-								<td><center><img src="http://gifok.net/images/2017/10/15/avatar.gif" alt="альтернативный текст"><center></td>
+								<td><center><img src="http://gifok.net/images/2017/10/15/avatar.gif" alt="Р°Р»СЊС‚РµСЂРЅР°С‚РёРІРЅС‹Р№ С‚РµРєСЃС‚"><center></td>
 							</tr>				
 					</table>
 				</td>
 				<td valign="top">
-					Фамилия: Покемон<br>
-					Имя: Гиви<br>
-					Отчество: Джугашвили<br>
-					Дата рождения: 66.99.1945.<br>
-					Полных лет: девяносто сто<br>
-					Телефон: 8 800 555 35 35<br>
-					Электронная почта: <a href="mailto:pokemongo@niantic.com">pokemongo@niantic.com</a></td>
+					Р¤Р°РјРёР»РёСЏ: РџРѕРєРµРјРѕРЅ<br>
+					РРјСЏ: Р“РёРІРё<br>
+					РћС‚С‡РµСЃС‚РІРѕ: Р”Р¶СѓРіР°С€РІРёР»Рё<br>
+					Р”Р°С‚Р° СЂРѕР¶РґРµРЅРёСЏ: 66.99.1945.<br>
+					РџРѕР»РЅС‹С… Р»РµС‚: РґРµРІСЏРЅРѕСЃС‚Рѕ СЃС‚Рѕ<br>
+					РўРµР»РµС„РѕРЅ: 8 800 555 35 35<br>
+					Р­Р»РµРєС‚СЂРѕРЅРЅР°СЏ РїРѕС‡С‚Р°: <a href="mailto:pokemongo@niantic.com">pokemongo@niantic.com</a></td>
 			</tr>
 								
-			<tr> <!-- 3 строка -->
+			<tr> <!-- 3 СЃС‚СЂРѕРєР° -->
 				<td valign="top"colspan="2"> 
-					<!-- Таблица для данных -->
+					<!-- РўР°Р±Р»РёС†Р° РґР»СЏ РґР°РЅРЅС‹С… -->
 					<table border="1" width="750" height="600" valign="top" cellspacing="0" cellpadding="1" >
 							<tr>
-								<td valign="top" height="6%" colspan="2"><div ><strong>1.Образование</strong></div></td>
+								<td valign="top" height="6%" colspan="2"><div ><strong>1.РћР±СЂР°Р·РѕРІР°РЅРёРµ</strong></div></td>
 							</tr>
 							<tr>
 								<td valign="top" height="6%"><div >1954-1969</div></td>
-								<td><div>Академия Бесполезных наук<br>Профиль: метание резинового сапога<br> </div></td>
+								<td><div>РђРєР°РґРµРјРёСЏ Р‘РµСЃРїРѕР»РµР·РЅС‹С… РЅР°СѓРє<br>РџСЂРѕС„РёР»СЊ: РјРµС‚Р°РЅРёРµ СЂРµР·РёРЅРѕРІРѕРіРѕ СЃР°РїРѕРіР°<br> </div></td>
 							</tr>
 							<tr>
 								<td valign="top" height="6%"><div >1970-2010</div></td>
-								<td>Университет Информационных Технологий Санта-Моники,
-									Факультет автоматизации производства и управления,
-									Кафедра систем управления и вычислительной техники.
-									Специальность: Вычислительные машины, комплексы, системы и сети
+								<td>РЈРЅРёРІРµСЂСЃРёС‚РµС‚ РРЅС„РѕСЂРјР°С†РёРѕРЅРЅС‹С… РўРµС…РЅРѕР»РѕРіРёР№ РЎР°РЅС‚Р°-РњРѕРЅРёРєРё,
+									Р¤Р°РєСѓР»СЊС‚РµС‚ Р°РІС‚РѕРјР°С‚РёР·Р°С†РёРё РїСЂРѕРёР·РІРѕРґСЃС‚РІР° Рё СѓРїСЂР°РІР»РµРЅРёСЏ,
+									РљР°С„РµРґСЂР° СЃРёСЃС‚РµРј СѓРїСЂР°РІР»РµРЅРёСЏ Рё РІС‹С‡РёСЃР»РёС‚РµР»СЊРЅРѕР№ С‚РµС…РЅРёРєРё.
+									РЎРїРµС†РёР°Р»СЊРЅРѕСЃС‚СЊ: Р’С‹С‡РёСЃР»РёС‚РµР»СЊРЅС‹Рµ РјР°С€РёРЅС‹, РєРѕРјРїР»РµРєСЃС‹, СЃРёСЃС‚РµРјС‹ Рё СЃРµС‚Рё
 								</td>
 							</tr>
 							<tr>
-								<td valign="top" height="6%" colspan="2"><div><strong>2.Достижения</strong></div></td>
+								<td valign="top" height="6%" colspan="2"><div><strong>2.Р”РѕСЃС‚РёР¶РµРЅРёСЏ</strong></div></td>
 							</tr>
 							<tr>
 								<td valign="top" height="6%">2016</td>
-								<td>Регулярное внедрение багов в Pokemon GO<br></td>
+								<td>Р РµРіСѓР»СЏСЂРЅРѕРµ РІРЅРµРґСЂРµРЅРёРµ Р±Р°РіРѕРІ РІ Pokemon GO<br></td>
 							</tr>
 							<tr>
 								<td valign="top" height="6%">2017</td>
-								<td>Почетная грамота за рекорд по сглючившим донатам"<br></td>
+								<td>РџРѕС‡РµС‚РЅР°СЏ РіСЂР°РјРѕС‚Р° Р·Р° СЂРµРєРѕСЂРґ РїРѕ СЃРіР»СЋС‡РёРІС€РёРј РґРѕРЅР°С‚Р°Рј"<br></td>
 							</tr>
 							<tr>
 								<td valign="top" height="6%">2017</td>
-								<td>Диплом I степени в научно-технической конференции<br>"Методики и практические средства порчи нервов пользователям Ingress и PokemonGO"<br></td>
+								<td>Р”РёРїР»РѕРј I СЃС‚РµРїРµРЅРё РІ РЅР°СѓС‡РЅРѕ-С‚РµС…РЅРёС‡РµСЃРєРѕР№ РєРѕРЅС„РµСЂРµРЅС†РёРё<br>"РњРµС‚РѕРґРёРєРё Рё РїСЂР°РєС‚РёС‡РµСЃРєРёРµ СЃСЂРµРґСЃС‚РІР° РїРѕСЂС‡Рё РЅРµСЂРІРѕРІ РїРѕР»СЊР·РѕРІР°С‚РµР»СЏРј Ingress Рё PokemonGO"<br></td>
 							</tr>
 							<tr>
 								<td valign="top" height="6%">2017</td>
-								<td>Премия "Самый кривой рандом века"<br></td>
+								<td>РџСЂРµРјРёСЏ "РЎР°РјС‹Р№ РєСЂРёРІРѕР№ СЂР°РЅРґРѕРј РІРµРєР°"<br></td>
 							</tr>
 							<tr>
-								<td valign="top" height="6%" colspan="2"><div><strong>3.Опыт работы</strong></div></td>
+								<td valign="top" height="6%" colspan="2"><div><strong>3.РћРїС‹С‚ СЂР°Р±РѕС‚С‹</strong></div></td>
 							</tr>
 							<tr>
 								<td valign="top" height="6%">2008-2016  <br></td>
-								<td> ОАО "Петушиный угол", продавец-консультант услуг грязной уборки чистых туалетов<br></td>
+								<td> РћРђРћ "РџРµС‚СѓС€РёРЅС‹Р№ СѓРіРѕР»", РїСЂРѕРґР°РІРµС†-РєРѕРЅСЃСѓР»СЊС‚Р°РЅС‚ СѓСЃР»СѓРі РіСЂСЏР·РЅРѕР№ СѓР±РѕСЂРєРё С‡РёСЃС‚С‹С… С‚СѓР°Р»РµС‚РѕРІ<br></td>
 							</tr>
 							<tr>
 								<td valign="top" height="6%">2016-2017<br></td>
-								<td> "Niantic Company", разработчик и сопровожденец кода Pokemon GO, модератор службы поддержки, генератор бреда и банов, менеджер по идиотизму.<br></td>
+								<td> "Niantic Company", СЂР°Р·СЂР°Р±РѕС‚С‡РёРє Рё СЃРѕРїСЂРѕРІРѕР¶РґРµРЅРµС† РєРѕРґР° Pokemon GO, РјРѕРґРµСЂР°С‚РѕСЂ СЃР»СѓР¶Р±С‹ РїРѕРґРґРµСЂР¶РєРё, РіРµРЅРµСЂР°С‚РѕСЂ Р±СЂРµРґР° Рё Р±Р°РЅРѕРІ, РјРµРЅРµРґР¶РµСЂ РїРѕ РёРґРёРѕС‚РёР·РјСѓ.<br></td>
 							</tr>
 							<tr>
-								<td valign="top" height="6%" colspan="2"><div><strong>4.Навыки,умения, личные качества</strong></div></td>
+								<td valign="top" height="6%" colspan="2"><div><strong>4.РќР°РІС‹РєРё,СѓРјРµРЅРёСЏ, Р»РёС‡РЅС‹Рµ РєР°С‡РµСЃС‚РІР°</strong></div></td>
 							</tr>
 							<tr>
 								<td valign="top" height="6%"colspan="2">
 									<ol type="1">
-										<li><s>Шизофреник</s></li>
-										<li><s>Агорафоб</s></li>
-										<li><s>Садист</s></li>
-										<li>Отсуствие критического мышления</li>
-										<li>Отсуствие мышления в принципе</li>
-										<li>Навязчивые бредовые идеи</li>
+										<li><s>РЁРёР·РѕС„СЂРµРЅРёРє</s></li>
+										<li><s>РђРіРѕСЂР°С„РѕР±</s></li>
+										<li><s>РЎР°РґРёСЃС‚</s></li>
+										<li>РћС‚СЃСѓСЃС‚РІРёРµ РєСЂРёС‚РёС‡РµСЃРєРѕРіРѕ РјС‹С€Р»РµРЅРёСЏ</li>
+										<li>РћС‚СЃСѓСЃС‚РІРёРµ РјС‹С€Р»РµРЅРёСЏ РІ РїСЂРёРЅС†РёРїРµ</li>
+										<li>РќР°РІСЏР·С‡РёРІС‹Рµ Р±СЂРµРґРѕРІС‹Рµ РёРґРµРё</li>
 									</ol>
 								</td>
 							</tr>
 							<tr>
-								<td valign="top" height="6%" colspan="2"><div><strong>5.Желаемое место работы</strong></div></td>
+								<td valign="top" height="6%" colspan="2"><div><strong>5.Р–РµР»Р°РµРјРѕРµ РјРµСЃС‚Рѕ СЂР°Р±РѕС‚С‹</strong></div></td>
 							</tr>
 							<tr>
-								<td valign="top" height="6%" colspan="2"><div>Хочу объесться грибочков и выпустить обновление, где все, что ты ловишь превращается в дитто на 10 СР, рейдбоссы все становятся с кэтчрейтом 0,000001% и тоже превращаются в дитто, при попытке крутить покестоп он тоже превращается в дитто, ставишь покемона на вышку - та же ситуация, а если ранее поставленного кто-то сбил - монеты не приходят, а уходят, и как раз сегодня новый ивент - лимит 100 монет в день! насладитесь чудесами! кнопки evolve и transfer меняются местами, причем так часто, как нужно чтобы побольше эвольнуть мелочь и потерять много топов {а то и так все прокаченные, в соло на боссов ходят, ишь чего удумали}... вылупившийся из яйца покемон тут же моментально сбегает, а при нажатии appraise вместо тренера внезапно вылазит реклама казино "Вулкан"</div></td>
+								<td valign="top" height="6%" colspan="2"><div>РҐРѕС‡Сѓ РѕР±СЉРµСЃС‚СЊСЃСЏ РіСЂРёР±РѕС‡РєРѕРІ Рё РІС‹РїСѓСЃС‚РёС‚СЊ РѕР±РЅРѕРІР»РµРЅРёРµ, РіРґРµ РІСЃРµ, С‡С‚Рѕ С‚С‹ Р»РѕРІРёС€СЊ РїСЂРµРІСЂР°С‰Р°РµС‚СЃСЏ РІ РґРёС‚С‚Рѕ РЅР° 10 РЎР , СЂРµР№РґР±РѕСЃСЃС‹ РІСЃРµ СЃС‚Р°РЅРѕРІСЏС‚СЃСЏ СЃ РєСЌС‚С‡СЂРµР№С‚РѕРј 0,000001% Рё С‚РѕР¶Рµ РїСЂРµРІСЂР°С‰Р°СЋС‚СЃСЏ РІ РґРёС‚С‚Рѕ, РїСЂРё РїРѕРїС‹С‚РєРµ РєСЂСѓС‚РёС‚СЊ РїРѕРєРµСЃС‚РѕРї РѕРЅ С‚РѕР¶Рµ РїСЂРµРІСЂР°С‰Р°РµС‚СЃСЏ РІ РґРёС‚С‚Рѕ, СЃС‚Р°РІРёС€СЊ РїРѕРєРµРјРѕРЅР° РЅР° РІС‹С€РєСѓ - С‚Р° Р¶Рµ СЃРёС‚СѓР°С†РёСЏ, Р° РµСЃР»Рё СЂР°РЅРµРµ РїРѕСЃС‚Р°РІР»РµРЅРЅРѕРіРѕ РєС‚Рѕ-С‚Рѕ СЃР±РёР» - РјРѕРЅРµС‚С‹ РЅРµ РїСЂРёС…РѕРґСЏС‚, Р° СѓС…РѕРґСЏС‚, Рё РєР°Рє СЂР°Р· СЃРµРіРѕРґРЅСЏ РЅРѕРІС‹Р№ РёРІРµРЅС‚ - Р»РёРјРёС‚ 100 РјРѕРЅРµС‚ РІ РґРµРЅСЊ! РЅР°СЃР»Р°РґРёС‚РµСЃСЊ С‡СѓРґРµСЃР°РјРё! РєРЅРѕРїРєРё evolve Рё transfer РјРµРЅСЏСЋС‚СЃСЏ РјРµСЃС‚Р°РјРё, РїСЂРёС‡РµРј С‚Р°Рє С‡Р°СЃС‚Рѕ, РєР°Рє РЅСѓР¶РЅРѕ С‡С‚РѕР±С‹ РїРѕР±РѕР»СЊС€Рµ СЌРІРѕР»СЊРЅСѓС‚СЊ РјРµР»РѕС‡СЊ Рё РїРѕС‚РµСЂСЏС‚СЊ РјРЅРѕРіРѕ С‚РѕРїРѕРІ {Р° С‚Рѕ Рё С‚Р°Рє РІСЃРµ РїСЂРѕРєР°С‡РµРЅРЅС‹Рµ, РІ СЃРѕР»Рѕ РЅР° Р±РѕСЃСЃРѕРІ С…РѕРґСЏС‚, РёС€СЊ С‡РµРіРѕ СѓРґСѓРјР°Р»Рё}... РІС‹Р»СѓРїРёРІС€РёР№СЃСЏ РёР· СЏР№С†Р° РїРѕРєРµРјРѕРЅ С‚СѓС‚ Р¶Рµ РјРѕРјРµРЅС‚Р°Р»СЊРЅРѕ СЃР±РµРіР°РµС‚, Р° РїСЂРё РЅР°Р¶Р°С‚РёРё appraise РІРјРµСЃС‚Рѕ С‚СЂРµРЅРµСЂР° РІРЅРµР·Р°РїРЅРѕ РІС‹Р»Р°Р·РёС‚ СЂРµРєР»Р°РјР° РєР°Р·РёРЅРѕ "Р’СѓР»РєР°РЅ"</div></td>
 							</tr>						
 					</table>
 				</td>				
