--- a/index_l2.html
+++ b/index_l2.html
@@ -11,6 +11,7 @@
 	<body>
 	<center>
 <!-- Основная таблица -->
+	<table.main>
 	<table border="1" width="800" height="1000" valign="top" cellpadding="5" cellspacing="0" rules="none">
 			
 			<tr> <!-- 1 строка -->
@@ -111,6 +112,7 @@
 				</td>				
 			</tr>					
 	</table>
+	</table.main>
 	</center>
 	</body>
 </html>
