--- a/index_l2.html
+++ b/index_l2.html
@@ -10,10 +10,9 @@
 	</head>
 	<body>
 	<center>
-<!-- Основная таблица -->
-	<table.main>
+<!-- Основная таблица -->	
 	<table border="1" width="800" height="1000" valign="top" cellpadding="5" cellspacing="0" rules="none">
-			
+	<tablemain>		
 			<tr> <!-- 1 строка -->
 				<!-- Заголовок -->
 				<td height="2%" colspan="2" valign="top"><div><U><center><h2>РЕЗЮМЕ</h2></center><U></div></td>		
@@ -111,8 +110,7 @@
 					</table>
 				</td>				
 			</tr>					
-	</table>
-	</table.main>
+	</tablemain>	
 	</center>
 	</body>
 </html>
